# jegp

./: .clang-format  .cmake-format.yaml  .gitignore  .travis.yml  14882.css  CMakeLists.txt  CMakePresets.json  README.md  contents.html  full.html  hash.combine.html  index.html  intro.general.html  intro.html  jegpConfig.cmake  libraryindex.html  refs.html  requirements.html  reserved.names.html  scope.html  static.downcast.html  utilities.general.html  utilities.html  utility.html  utility.syn.html  utility.underlying.html
.github/workflows/: test.yml
cmake/: JEGPFindDependencies.cmake  JEGPOptions.cmake  README.md  find_dependencies.cmake  jegp-config.cmake  jegpConfig.cmake
cmake/modules/: JEGPFindDependencies.cmake  jegp_add_tests.cmake  jegp_find_dependencies.cmake
doc/: CMakeLists.txt  README.md  intro.md  intro.tex  utilities.md  utilities.tex
include/jegp/: Literal_constant.hpp  String_ref.hpp  String_view.hpp  Strong_typedef.hpp  bit.hpp  utility.hpp
test/: CMakeLists.txt  all_includes.cpp  utility.cpp
travis/: install_clang.sh  install_cmake.sh  meet_doc_prereq.sh  postprocess_doc.sh
